# typingtester

./: README.md  TypingTester.cabal  typingtester.hs
